# metadata-event-handler

./: .env.schema  .gitignore  .pre-commit-config.yaml  Dockerfile  ESDatasetActivityModel.py  ESItemActivityModel.py  ESItemModel.py  Jenkinsfile  MetadataConsumer.py  README.md  config.py  consumer.py  pyproject.toml  requirements.txt  run.py  utils.py
.github/: pull_request_template.md
.github/workflows/: build-and-publish.yml  deploy-image.yml  trigger-jenkins.yml
dependencies/: elastic_search.py
kafka_schema/: dataset.activity.avsc  metadata.items.activity.avsc  metadata.metadata.extended.avsc  metadata.metadata.items.avsc
