[tool.poetry]
name = "metadata_event_handler"
version = "0.1.0"
description = "Consumes Metadata events and writes into ElasticSearch"
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "0.20.0"
fastavro = "^1.5.2"
aiokafka = "^0.7.2"
elasticsearch = {version = "^7.8.0", extras = ["async"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
